# PixHomology

./: .appveyor.yml  .buildinfo  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  faq.html  genindex.html  index.html  installation.html  objects.inv  overview.html  pixhomology.html  py-modindex.html  pyproject.toml  releases.html  search.html  searchindex.js  setup.py  usage.html
.doctrees/: environment.pickle  faq.doctree  index.doctree  installation.doctree  overview.doctree  pixhomology.doctree  releases.doctree  usage.doctree
.github/workflows/: conda.yml  docs.yml  documentation.yml  format.yml  pip.yml  python-app.yml  python-publish.yml  static.yml  wheels.yml
.ipynb_checkpoints/: CMakeLists-checkpoint.txt  README-checkpoint.md  setup-checkpoint.py
_sources/: index.rst.txt  overview.rst.txt
_static/: documentation_options.js
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  faq.rst  index.html  index.rst  installation.md  installation.rst  make.bat  overview.rst  pixhomology.rst  releases.rst  usage.md  usage.rst
docs/images/: logo_project.ggb
notebooks/: topological_image_segmentation.ipynb
pixhomology/: __init__.py  pixhom.c  pixhom.h  pixhom.py  pixhomology.py  vis.py
pixhomology/.ipynb_checkpoints/: pixhom-checkpoint.c  pixhom-checkpoint.py
src/: pixhom.c  pixhom.cpp  pixhom.hpp  pypixhom.cpp  utils.cpp  utils.hpp  visual.cpp  visual.hpp
tests/: all_in_one.py  datasets.py  memory_test.py  requirements.txt  results_test.py  test.py  test_basic.py  time_test.py
tests/.ipynb_checkpoints/: all_in_one-checkpoint.py  test-checkpoint.py  (+4 more)
(+10 files in other folders)
